[project]
name = "aiofiles"
version = "24.1.0"
description = "File support for asyncio."
authors = [
    {name = "Tin Tvrtkovic", email = "tinchester@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Framework :: AsyncIO",
]

[project.urls]
Changelog = "https://github.com/Tinche/aiofiles#history"
"Bug Tracker" = "https://github.com/Tinche/aiofiles/issues"
repository = "https://github.com/Tinche/aiofiles"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
parallel = true
source_pkgs = ["aiofiles"]

[tool.coverage.paths]
source = [
   "src",
   ".tox/*/lib/python*/site-packages",
   ".tox/pypy*/site-packages",
]

[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
known_first_party = ["aiofiles"]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "coverage>=6.4.4",
    "tox>=3.25.1",
]
lint = [
    "black>=22.8.0",
    "flake8>=5.0.4",
    "isort==5.11.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
